# lat

./: meson.build
include/: lat.hpp
src/: lat.cpp
tests/: lat_test.cpp
